force-app/main/default/objects/com_smartsheet__Smartsheet_Data_Load__c/com_smartsheet__Smartsheet_Data_Load__c.object-meta.xml
<CustomObject>
    <label>Smartsheet Data Load</label>
    <nameField>
        <label>Smartsheet Data Load Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Smartsheet Data Load</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>