force-app/main/default/objects/com_smartsheet__Smartsheet_Data_Load__c/fields/com_smartsheet__apexJobId__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__apexJobId__c</fullName>
    <description>The id that matches up to the AsyncApexJob object</description>
    <label>Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>