force-app/main/default/objects/com_smartsheet__Smartsheet_Data_Load__c/fields/com_smartsheet__sheetId__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__sheetId__c</fullName>
    <label>sheetId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>