force-app/main/default/objects/com_smartsheet__Smartsheet_Data_Load__c/fields/com_smartsheet__sobjectName__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__sobjectName__c</fullName>
    <label>sobjectName</label>
    <length>60</length>
    <type>Text</type>
</CustomField>