force-app/main/default/objects/com_smartsheet__Smartsheet_Data_Load__c/fields/com_smartsheet__type__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>export</fullName>
            </value>
            <value>
                <fullName>import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>